Execution stats level explain of aggregate command segfaults when SBE is enabled

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Hide
       ➜ cat repro.js
      (function() {
      "use strict";
      
      const coll = db.explain_sample;
      coll.drop();
      
      // Turn on SBE.
      assert.commandWorked(
          db.adminCommand({setParameter: 1, internalQueryEnableSlotBasedExecutionEngine: true}));
      
      assert.commandWorked(coll.insert({a: 1}));
      
      // Explain a $sample pipeline.
      printjson(coll.explain("allPlansExecution").aggregate([{$sample: {size: 10}}]));
      }());
       ➜ python3 buildscripts/resmoke.py run --suites=core repro.js
      
      Show
      ➜ cat repro.js (function() { "use strict" ; const coll = db.explain_sample; coll.drop(); // Turn on SBE. assert .commandWorked( db.adminCommand({setParameter: 1, internalQueryEnableSlotBasedExecutionEngine: true })); assert .commandWorked(coll.insert({a: 1})); // Explain a $sample pipeline. printjson(coll.explain( "allPlansExecution" ).aggregate([{$sample: {size: 10}}])); }()); ➜ python3 buildscripts/resmoke.py run --suites=core repro.js
    • Query 2021-01-11, Query 2021-01-25
    • 7
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      See "Steps to Reproduce". I haven't yet dug into the details of why this crash recurs, but it can be reproduced trivially with the short provided script.

            Assignee:
            David Storch
            Reporter:
            David Storch
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: