SERVER-53656 Fix use-after-free in SBE with agg executionStats explain