jstests/aggregation/sources/unionWith/unionWith_explain.js
@@ -3,7 +3,6 @@
  * pipeline.
  * @tags: [
  *   do_not_wrap_aggregations_in_facets,
- *   sbe_incompatible,
  * ]
  */
 
